<?xml version="1.0"?>
<package format="2">
  <name>mmros_wrapper</name>
  <version>1.0.0</version>
  <description>
    MMROS Wrapper is a ROS package that provides a simple node, MMRosWrapper, which subscribes to an image topic, performs instance segmentation using the mmdetection framework with the help of mmdeploy, and collects litter objects from the images. It uses torch for neural network computations.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
